--- a/Exercices/exercices-javascript/exercices-complementaires/index.html
+++ b/Exercices/exercices-javascript/exercices-complementaires/index.html
@@ -27,7 +27,15 @@
                     </div>
                     <p class="introduction">Salut à tous et Bienvenue pour cette nouvelle semaine au sein de la SiriusSchool. Vous trouverez les consignes dans le fichier script.js</p>
                 </span>
-
+                <form id="myform">
+                  <label for="name" >Name</label>
+                  <input type="text" id="name" name="name">
+              <label for="name ">Comment</label>
+              <input type="text" id="comment" name="name">
+              <input type="submit" value="Submit">
+                </form>
+                <div></div>
+                <button id="">envoye</button>
     </div>
     </section>
 </body>
